--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <td>
-      <img src="C:\Users\Alis\Downloads\profilepic2.png" height="200" width="200">
+      <img src="profilepic2.png" height="200" width="200">
     </td>
 
     <td>
